--- a/StonksCasino/StonksCasino/Views/Roulette/RouletteWindow.xaml
+++ b/StonksCasino/StonksCasino/Views/Roulette/RouletteWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:StonksCasino.Views.Roulette"
         mc:Ignorable="d"
-        Title="RouletteWindow" Height="600" Width="1000">
+        Title="RouletteWindow" Height="600" Width="1000" WindowState="Maximized">
     <Window.Resources>
         <Storyboard x:Key="Storyboard" BeginTime="00:00:00.000" Duration="00:00:10.000">
             <DoubleAnimation Storyboard.TargetName="imWheel" 
@@ -418,8 +418,8 @@
                     </Grid.RowDefinitions>
                     <!--button 1-->
                     <Image ToolTip="500" Opacity="{Binding MyBettingTable.Bets[0].Opacity }" Source="{Binding MyBettingTable.Bets[0].ImageUrl}" Grid.Column="5" Grid.Row="22" Grid.ColumnSpan="5" Grid.RowSpan="10"/>
-                    <TextBlock Text="{Binding MyBettingTable.Bets[0].AmountLabel}" Foreground="White"  Grid.Column="5" Grid.Row="22" Grid.ColumnSpan="5" Grid.RowSpan="10" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                    <Button Tag="{Binding MyBettingTable.Bets[0]}" MouseRightButtonUp="Button_MouseRightButtonUp"  Grid.Column="5" Grid.Row="23" Grid.RowSpan="9" Grid.ColumnSpan="4" MouseEnter="Button_MouseEnter" MouseLeave="Button_MouseLeave" Click="Button_Click" Background="Transparent" Style="{DynamicResource Buttonstyleinzet}"/>
+                    <TextBlock Text="{Binding MyBettingTable.Bets[0].AmountLabel}" FontSize="{Binding  MyBettingTable.Bets[0].Myfontsize}" Foreground="White"  Grid.Column="5" Grid.Row="22" Grid.ColumnSpan="5" Grid.RowSpan="10" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    <Button   Tag="{Binding MyBettingTable.Bets[0]}" MouseRightButtonUp="Button_MouseRightButtonUp"  Grid.Column="5" Grid.Row="23" Grid.RowSpan="9" Grid.ColumnSpan="4" MouseEnter="Button_MouseEnter" MouseLeave="Button_MouseLeave" Click="Button_Click" Background="Transparent" Style="{DynamicResource Buttonstyleinzet}"></Button>
                     
                     <!--button 1/2-->
                     <Image Opacity="{Binding MyBettingTable.Bets[1].Opacity }" Source="{Binding MyBettingTable.Bets[1].ImageUrl}" Grid.Column="5" Grid.Row="17" Grid.ColumnSpan="5" Grid.RowSpan="9"/>
@@ -996,7 +996,22 @@
                     <TextBlock Text="{Binding MyBettingTable.Bets[115].AmountLabel}" Foreground="White"  Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="5" Grid.RowSpan="32" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     <Button Tag="{Binding MyBettingTable.Bets[115]}" MouseRightButtonUp="Button_MouseRightButtonUp" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="5" Grid.RowSpan="32" MouseEnter="Button_MouseEnter" MouseLeave="Button_MouseLeave" Click="Button_Click" Background="Transparent" Style="{DynamicResource Buttonstyleinzet}"/>
 
-                    
+                    <!--button 1e 12-->
+                    <Image Opacity="{Binding MyBettingTable.Bets[116].Opacity }" Source="{Binding MyBettingTable.Bets[116].ImageUrl}" Grid.Column="5" Grid.Row="32" Grid.ColumnSpan="23" Grid.RowSpan="5"/>
+                    <TextBlock Text="{Binding MyBettingTable.Bets[116].AmountLabel}" Foreground="White"  Grid.Column="5" Grid.Row="32" Grid.ColumnSpan="23" Grid.RowSpan="5" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    <Button Tag="{Binding MyBettingTable.Bets[116]}" MouseRightButtonUp="Button_MouseRightButtonUp" Grid.Column="5" Grid.Row="32" Grid.ColumnSpan="23" Grid.RowSpan="5" MouseEnter="Button_MouseEnter" MouseLeave="Button_MouseLeave" Click="Button_Click" Background="Transparent" Style="{DynamicResource Buttonstyleinzet}"/>
+
+                    <!--button 2e 12-->
+                    <Image Opacity="{Binding MyBettingTable.Bets[117].Opacity }" Source="{Binding MyBettingTable.Bets[117].ImageUrl}" Grid.Column="29" Grid.Row="32" Grid.ColumnSpan="23" Grid.RowSpan="5"/>
+                    <TextBlock Text="{Binding MyBettingTable.Bets[117].AmountLabel}" Foreground="White"  Grid.Column="29" Grid.Row="32" Grid.ColumnSpan="23" Grid.RowSpan="5" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    <Button Tag="{Binding MyBettingTable.Bets[117]}" MouseRightButtonUp="Button_MouseRightButtonUp" Grid.Column="29" Grid.Row="32" Grid.ColumnSpan="23" Grid.RowSpan="5" MouseEnter="Button_MouseEnter" MouseLeave="Button_MouseLeave" Click="Button_Click" Background="Transparent" Style="{DynamicResource Buttonstyleinzet}"/>
+
+                    <!--button 3e 12-->
+                    <Image Opacity="{Binding MyBettingTable.Bets[118].Opacity }" Source="{Binding MyBettingTable.Bets[118].ImageUrl}" Grid.Column="53" Grid.Row="32" Grid.ColumnSpan="23" Grid.RowSpan="5"/>
+                    <TextBlock Text="{Binding MyBettingTable.Bets[118].AmountLabel}" Foreground="White"  Grid.Column="53" Grid.Row="32" Grid.ColumnSpan="23" Grid.RowSpan="5" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    <Button Tag="{Binding MyBettingTable.Bets[118]}" MouseRightButtonUp="Button_MouseRightButtonUp" Grid.Column="53" Grid.Row="32" Grid.ColumnSpan="23" Grid.RowSpan="5" MouseEnter="Button_MouseEnter" MouseLeave="Button_MouseLeave" Click="Button_Click" Background="Transparent" Style="{DynamicResource Buttonstyleinzet}"/>
+
+
                 </Grid>
 
                 <StackPanel Grid.Row="3" Grid.RowSpan="2" HorizontalAlignment="Center" Orientation="Horizontal">
