--- a/StonksCasino/StonksCasino/Views/poker/PokerWindow.xaml
+++ b/StonksCasino/StonksCasino/Views/poker/PokerWindow.xaml
@@ -34,7 +34,7 @@
             <Grid Margin="20">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="1*"/>
-                    <ColumnDefinition Width="2*"/>
+                    <ColumnDefinition Width="3*"/>
                     <ColumnDefinition Width="1*"/>
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
@@ -42,7 +42,30 @@
                     <RowDefinition Height="1.5*"/>
                     <RowDefinition Height="1*"/>
                 </Grid.RowDefinitions>
+                <!-- table cards -->
+                <Grid Grid.Row="1" Grid.Column="1">
+                    <Grid.RowDefinitions>
+                        <RowDefinition/>
+                        <RowDefinition Height="4*"/>
+                        <RowDefinition/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <Image Margin="5,0" Grid.Column="0" Grid.Row="1" Source="{Binding MyTable[0].ActiveURL, Mode=OneWay}" VerticalAlignment="Center"/>
+                    <Image Margin="5,0" Grid.Column="1" Grid.Row="1" Source="{Binding MyTable[1].ActiveURL, Mode=OneWay}" VerticalAlignment="Center"/>
+                    <Image Margin="5,0" Grid.Column="2" Grid.Row="1" Source="{Binding MyTable[2].ActiveURL, Mode=OneWay}" VerticalAlignment="Center"/>
+                    <Image Margin="5,0" Grid.Column="3" Grid.Row="1" Source="{Binding MyTable[3].ActiveURL, Mode=OneWay}" VerticalAlignment="Center"/>
+                    <Image Margin="5,0" Grid.Column="4" Grid.Row="1" Source="{Binding MyTable[4].ActiveURL, Mode=OneWay}" VerticalAlignment="Center"/>
+                </Grid>
 
+                
+                
+                <!-- player hand -->
                 <ItemsControl   Background="Transparent" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Center" ItemsSource="{Binding Players[0].Hand, Mode=OneWay}">
                     <ItemsControl.ItemsPanel>
                         <ItemsPanelTemplate>
@@ -51,15 +74,10 @@
                     </ItemsControl.ItemsPanel>
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
-                            <Image Margin="10,0" Source="{Binding ImageURL, Mode=OneWay}" />
+                            <Image Margin="10,0" Source="{Binding ActiveURL, Mode=OneWay}" />
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
                 </ItemsControl>
-
-                <StackPanel HorizontalAlignment="Center" Orientation="Horizontal" Grid.Row="2" Grid.Column="1">
-                    
-                </StackPanel>
-
 
                 <Border Grid.Row="2" Grid.Column="2" CornerRadius="5" BorderBrush="#282929" BorderThickness="10">
                     <Grid Grid.Row="2" Grid.Column="3" Background="#282929">
