--- a/StonksCasino/StonksCasino/Views/blackjack/BlackjackWindow.xaml
+++ b/StonksCasino/StonksCasino/Views/blackjack/BlackjackWindow.xaml
@@ -61,13 +61,21 @@
                     <Border Height="2" Background="Black"></Border>
                     <TextBlock Text="{Binding MyToken.MyPlayerSplit, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" x:Name="tbPlayer" Width="50" Height="40" FontSize="30" VerticalAlignment="Center" HorizontalAlignment="Center" TextAlignment="Center"></TextBlock>
                 </StackPanel>
-                <ListView HorizontalAlignment="Center" ItemsSource="{Binding }" Grid.Column="1" Grid.Row="2" SelectedItem="{Binding SelectedCard}" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="{x:Null}">
-                    <ListView.ItemTemplate>
+                
+                <ItemsControl Background="Transparent" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Center" ItemsSource="{Binding Players[0].Hand, Mode=OneWay}">
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <StackPanel Orientation="Horizontal"></StackPanel>
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                    <ItemsControl.ItemTemplate>
                         <DataTemplate>
-                            <Image Source="{Binding GetImageUrl}" Height="100" Margin="-20,0,0,0"/>
+                            <Image Margin="10, 30" Source="{Binding ImageURL, Mode=OneWay}" />
                         </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+                
+                
             </Grid>
             <Grid Grid.Column="1">
                 <Grid.ColumnDefinitions>
@@ -92,9 +100,9 @@
                         </ControlTemplate>
                     </Button.Template>
                 </Button>
-                <TextBox x:Name="tokeninzet" Text="{Binding MyToken.MyAantal, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" TextAlignment="Center" VerticalContentAlignment="Center" Width="75" Height="35" Grid.Row="1" Background="White" FontSize="16"></TextBox>
-                <Button x:Name="btDeal" Click="Melding_Click" Width="60" Height="35" Grid.Row="3" Background="White" Content="Deal" FontSize="10"></Button>
-                <Button x:Name="btHit" Click="Hit_Click" Width="60" Height="35" Grid.Row="4" Background="White" Content="Hit" FontSize="10"></Button>
+                <TextBox IsEnabled="{Binding MyToken.Tokendrop, Mode=TwoWay}" Text="{Binding MyToken.MyAantal, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" TextAlignment="Center" VerticalContentAlignment="Center" Width="75" Height="35" Grid.Row="1" Background="White" FontSize="16"></TextBox>
+                <Button IsEnabled="{Binding MyToken.Deals, Mode=TwoWay}" Click="Deal_click" Width="60" Height="35" Grid.Row="3" Background="White" Content="Deal" FontSize="10"></Button>
+                <Button IsEnabled="{Binding MyToken.Hit, Mode=TwoWay}" Click="Hit_Click" Width="60" Height="35" Grid.Row="4" Background="White" Content="Hit" FontSize="10"></Button>
             </Grid>
             <Grid Grid.Column="1" Grid.Row="1">
                 <Grid.ColumnDefinitions>
@@ -108,9 +116,9 @@
                     <RowDefinition Height="1*"></RowDefinition>
                     <RowDefinition Height="1*"></RowDefinition>
                 </Grid.RowDefinitions>
-                <Button x:Name="btSplitten" Click="Splitten_Click" Width="60" Height="35" Padding="10" Background="White" Content="Splitten" FontSize="10"></Button>
-                <Button x:Name="btDubbel" Click="Dubbelen_Click" Width="60" Height="35" Padding="10" Grid.Row="1" Background="White" Content="Dubbel" FontSize="10"></Button>
-                <Button x:Name="btStand" Click="Stand_Click" Width="60" Height="35" Padding="10" Grid.Row="2" Background="White" Content="Stand" FontSize="10"></Button>
+                <Button IsEnabled="{Binding MyToken.Splitten, Mode=TwoWay}" Click="Splitten_Click" Width="60" Height="35" Padding="10" Background="White" Content="Splitten" FontSize="10"></Button>
+                <Button IsEnabled="{Binding MyToken.Dubbel, Mode=TwoWay}" Click="Dubbelen_Click" Width="60" Height="35" Padding="10" Grid.Row="1" Background="White" Content="Dubbel" FontSize="10"></Button>
+                <Button IsEnabled="{Binding MyToken.Standing, Mode=TwoWay}" Click="Stand_Click" Width="60" Height="35" Padding="10" Grid.Row="2" Background="White" Content="Stand" FontSize="10"></Button>
             </Grid>
         </Grid>
     </Grid>
