--- a/StonksCasino/StonksCasino/Views/blackjack/BlackjackWindow.xaml
+++ b/StonksCasino/StonksCasino/Views/blackjack/BlackjackWindow.xaml
@@ -19,10 +19,10 @@
             </StackPanel>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                 <Image Source="/Img/Main/Account.png" Margin="5,0" Height="40"></Image>
-                <TextBlock Text="{Binding User.MyName, Mode=OneWay}" FontSize="20" Foreground="White" VerticalAlignment="Center"/>
+                <TextBlock Text="{Binding user.MyName, Mode=OneWay}" FontSize="20" Foreground="White" VerticalAlignment="Center"/>
                 <Image Source="/Img/Main/streep.png"></Image>
                 <Image Source="/Img/Main/Token.png" Height="40"></Image>
-                <TextBlock Text="{Binding User.MyTokens, Mode=OneWay}" Padding="10" Foreground="White" FontSize="20" VerticalAlignment="Center" />
+                <TextBlock Text="{Binding user.MyTokens, Mode=OneWay}" Padding="10" Foreground="White" FontSize="20" VerticalAlignment="Center" />
 
             </StackPanel>
         </Grid>
@@ -50,7 +50,7 @@
                     <ColumnDefinition Width="1*"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
 
-                <ItemsControl Background="Transparent" Grid.Column="1" HorizontalAlignment="Center" ItemsSource="{Binding Computer[0].HandC, Mode=OneWay}">
+                <ItemsControl Background="Transparent" Grid.Column="1" HorizontalAlignment="Center" ItemsSource="{Binding ComputerGame.Computer[0].HandC, Mode=OneWay}">
                     <ItemsControl.ItemsPanel>
                         <ItemsPanelTemplate>
                             <StackPanel Orientation="Horizontal"></StackPanel>
@@ -58,15 +58,15 @@
                     </ItemsControl.ItemsPanel>
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
-                            <Image Margin="10, 30" Source="{Binding ImageURL, Mode=OneWay}" />
+                            <Image Margin="10, 30" Source="{Binding ActiveURL, Mode=OneWay}" />
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
                 </ItemsControl>
 
                 <StackPanel Grid.Row="1" Grid.Column="1" VerticalAlignment="Center">
-                    <TextBlock Text="{Binding MyComputers.MyComputervalue, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" x:Name="tbBot" Width="50" Height="40" FontSize="30" VerticalAlignment="Center" HorizontalAlignment="Center" TextAlignment="Center"></TextBlock>
+                    <TextBlock Text="{Binding ComputerGame.Computer[0].ScoreC, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" Width="50" Height="40" FontSize="30" VerticalAlignment="Center" HorizontalAlignment="Center" TextAlignment="Center"></TextBlock>
                     <Border Height="2" Background="Black"></Border>
-                    <TextBlock Text="{Binding Game.Players[0].Score, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" x:Name="tbPlayer" Width="50" Height="40" FontSize="30" VerticalAlignment="Center" HorizontalAlignment="Center" TextAlignment="Center"></TextBlock>
+                    <TextBlock Text="{Binding Game.Players[0].Score, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" Width="50" Height="40" FontSize="30" VerticalAlignment="Center" HorizontalAlignment="Center" TextAlignment="Center"></TextBlock>
                 </StackPanel>
                 
                 <ItemsControl Background="Transparent" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Center" ItemsSource="{Binding Game.Players[0].Hand, Mode=OneWay}">
@@ -77,7 +77,7 @@
                     </ItemsControl.ItemsPanel>
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
-                            <Image Margin="10, 30" Source="{Binding ImageURL, Mode=OneWay}" />
+                            <Image Margin="10, 30" Source="{Binding ActiveURL, Mode=OneWay}" />
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
                 </ItemsControl>
