--- a/StonksCasino/StonksCasino/Views/main/LibraryWindow.xaml
+++ b/StonksCasino/StonksCasino/Views/main/LibraryWindow.xaml
@@ -95,7 +95,9 @@
                     <RowDefinition Height="250*"/>
                     <RowDefinition Height="35*"/>
                 </Grid.RowDefinitions>
-
+                <StackPanel Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="5" VerticalAlignment="Center">
+                    <Button Content="+ 10.000 Tokens" Background="Black" Foreground="White" FontSize="30" Click="Tokens_Cilck"/>
+                </StackPanel>
             </Grid>
         </Grid>
     </Grid>
