--- a/StonksCasino/StonksCasino/Views/Roulette/RouletteWindow.xaml
+++ b/StonksCasino/StonksCasino/Views/Roulette/RouletteWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:StonksCasino.Views.Roulette"
         mc:Ignorable="d"
-        Title="RouletteWindow" Height="600" Width="1000" WindowState="Maximized" Closing="Window_Closing">
+        Title="RouletteWindow" Height="600" Width="1000" WindowState="Maximized"  Closing="Window_Closing">
     <Window.Resources>
         <Storyboard x:Key="Storyboard" BeginTime="00:00:00.000" Duration="00:00:10.000">
             <DoubleAnimation Storyboard.TargetName="imWheel" 
@@ -20,7 +20,7 @@
         </Grid.RowDefinitions>
         <Grid Background="#262626" Grid.Row="0" Grid.Column="0">
             <StackPanel Orientation="Horizontal">
-                <Button x:Name="btnBibliotheek" Content="Bibliotheek" FontSize="20" HorizontalAlignment="Left" Background="Transparent" Height="50" Padding="10" VerticalAlignment="Center" Foreground="White" />
+                <Button x:Name="btnBibliotheek" Click="btnBibliotheek_Click" Content="Bibliotheek" FontSize="20" HorizontalAlignment="Left" Background="Transparent" Height="50" Padding="10" VerticalAlignment="Center" Foreground="White" />
                 <Button x:Name="btnWinkel" Content="Winkel" FontSize="20" HorizontalAlignment="Left" Background="Transparent" Height="50" Padding="10" VerticalAlignment="Center" Foreground="White" />
                 <Button x:Name="BtnGeldStorten" Content="Geld storten" FontSize="20" HorizontalAlignment="Left" Background="Transparent" Height="50" Padding="10" VerticalAlignment="Center" Foreground="White"/>
 
