--- a/StonksCasino/StonksCasino/Views/poker/PokerWindow.xaml
+++ b/StonksCasino/StonksCasino/Views/poker/PokerWindow.xaml
@@ -54,16 +54,11 @@
                         <ColumnDefinition/>
                         <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
-                    <Image Margin="10,0" Grid.Column="0" Grid.Row="1" Source="/Img/Cards/AceClubs.png" VerticalAlignment="Center"/>
-                    <Image Margin="10,0" Grid.Column="1" Grid.Row="1" Source="/Img/Cards/AceClubs.png" VerticalAlignment="Center"/>
-                    <Image Margin="10,0" Grid.Column="2" Grid.Row="1" Source="/Img/Cards/AceClubs.png" VerticalAlignment="Center"/>
-                    <Image Margin="10,0" Grid.Column="3" Grid.Row="1" Source="/Img/Cards/BackBlue.png" VerticalAlignment="Center"/>
-                    <Image Margin="10,0" Grid.Column="4" Grid.Row="1" Source="/Img/Cards/BackBlue.png" VerticalAlignment="Center"/>
-                    <!--<Image Margin="5,0" Grid.Column="0" Grid.Row="1" Source="{Binding MyTable[0].ActiveURL, Mode=OneWay}" VerticalAlignment="Center"/>
-                    <Image Margin="5,0" Grid.Column="1" Grid.Row="1" Source="{Binding MyTable[1].ActiveURL, Mode=OneWay}" VerticalAlignment="Center"/>
-                    <Image Margin="5,0" Grid.Column="2" Grid.Row="1" Source="{Binding MyTable[2].ActiveURL, Mode=OneWay}" VerticalAlignment="Center"/>
-                    <Image Margin="5,0" Grid.Column="3" Grid.Row="1" Source="{Binding MyTable[3].ActiveURL, Mode=OneWay}" VerticalAlignment="Center"/>
-                    <Image Margin="5,0" Grid.Column="4" Grid.Row="1" Source="{Binding MyTable[4].ActiveURL, Mode=OneWay}" VerticalAlignment="Center"/>-->
+                    <Image Margin="10,0" Grid.Column="0" Grid.Row="1" Source="{Binding Game.MyTable[0].ActiveURL, Mode=OneWay}" VerticalAlignment="Center"/>
+                    <Image Margin="10,0" Grid.Column="1" Grid.Row="1" Source="{Binding Game.MyTable[1].ActiveURL}" VerticalAlignment="Center"/>
+                    <Image Margin="10,0" Grid.Column="2" Grid.Row="1" Source="{Binding Game.MyTable[2].ActiveURL}" VerticalAlignment="Center"/>
+                    <Image Margin="10,0" Grid.Column="3" Grid.Row="1" Source="{Binding Game.MyTable[3].ActiveURL}" VerticalAlignment="Center"/>
+                    <Image Margin="10,0" Grid.Column="4" Grid.Row="1" Source="{Binding Game.MyTable[4].ActiveURL}" VerticalAlignment="Center"/>
                 </Grid>
 
 
@@ -93,8 +88,8 @@
                         <ColumnDefinition Width="1*"/>
                         <ColumnDefinition Width="1.5*"/>
                     </Grid.ColumnDefinitions>
-                    <Image Margin="0,0,10,0" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Right" Source="/Img/Cards/AceClubs.png" />
-                    <Image Margin="10,0,0,0" Grid.Column="2" Grid.Row="1" HorizontalAlignment="Left" Source="/Img/Cards/AceClubs.png" />
+                    <Image Margin="0,0,10,0" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Right" Source="{Binding Game.Players[0].Hand[0].ActiveURL}" />
+                    <Image Margin="10,0,0,0" Grid.Column="2" Grid.Row="1" HorizontalAlignment="Left" Source="{Binding Game.Players[0].Hand[1].ActiveURL}" />
 
                     <Grid  Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="0" >
                         <Grid.ColumnDefinitions>
