--- a/StonksCasino/StonksCasino/MainWindow.xaml
+++ b/StonksCasino/StonksCasino/MainWindow.xaml
@@ -5,29 +5,67 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:StonksCasino"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800" WindowState="Maximized">
+        Title="MainWindow" Height="850" Width="1600" WindowState="Maximized">
     <Grid>
         <Grid.Background>
             <ImageBrush ImageSource="/Img/Main/background.png" />
         </Grid.Background>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1*"></ColumnDefinition>
-            <ColumnDefinition Width="1*"></ColumnDefinition>
-            <ColumnDefinition Width="1*"></ColumnDefinition>
+            <ColumnDefinition Width="0.9*"></ColumnDefinition>
+            <ColumnDefinition Width="1.5*"></ColumnDefinition>
+            <ColumnDefinition Width="0.9*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="1*"></RowDefinition>
-            <RowDefinition Height="1*"></RowDefinition>
-            <RowDefinition Height="1*"></RowDefinition>
+            <RowDefinition Height="0.7*"></RowDefinition>
+            <RowDefinition Height="2*"></RowDefinition>
+            <RowDefinition Height="0.7*"></RowDefinition>
         </Grid.RowDefinitions>
-        <TextBlock Text="Inloggen" Grid.Column="1" FontSize="30px" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
-        <StackPanel Grid.Row="1" Grid.Column="1">
-            <TextBlock Text="Gebruikersnaam" Foreground="White" FontSize="22"></TextBlock>
-            <TextBox Text="{Binding MyDatabase.MyUsername, Mode=OneWayToSource, UpdateSourceTrigger=PropertyChanged}" FontSize="20" Foreground="White" Background="Black"></TextBox>
-            <TextBlock Text="Wachtwoord" Foreground="White" FontSize="22"></TextBlock>
-            <PasswordBox PasswordChar="*"  FontSize="20" Foreground="White" Background="Black" PasswordChanged="PasswordBox_PasswordChanged" ></PasswordBox>
-            <!--<TextBox Text="{Binding MyDatabase.MyPassword, Mode=OneWayToSource, UpdateSourceTrigger=PropertyChanged}" FontSize="14" Foreground="White" Background="Black"></TextBox>-->
-        </StackPanel>
-        <Button Grid.Row="2" Grid.Column="1" Height="100" Width="200" Content="Inloggen" Background="{x:Null}" BorderBrush="{x:Null}" FontSize="40px" Click="Library_Click"/>
+        <TextBlock Text="StonksCasino" Grid.Column="1" FontSize="70px" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
+        
+        
+        <Grid Grid.Row="1" Grid.Column="1" Visibility="Visible">
+            
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="20"/>
+                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition Width="20"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="0*"/>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
+           
+                <RowDefinition Height="0.5*"/>
+                <RowDefinition Height="1*"/>
+                
+                <RowDefinition Height="20"/>
+            </Grid.RowDefinitions>
+            <Label Grid.RowSpan="8" Grid.ColumnSpan="3" Background="Black" Opacity="0.6"></Label>
+        
+            <StackPanel Grid.Row="2" Grid.Column="1">
+                <TextBlock   Text="Gebruikersnaam" Margin="0,10" Foreground="White" FontSize="30"></TextBlock>
+                <TextBox Text="{Binding MyDatabase.MyUsername, Mode=OneWayToSource, UpdateSourceTrigger=PropertyChanged}" FontSize="30" Foreground="Black" Background="White"></TextBox>
+            </StackPanel>
+            <StackPanel Grid.Row="3" Grid.Column="1">
+            <TextBlock Text="Wachtwoord" Foreground="White" Margin="0,10" FontSize="30"></TextBlock>
+                <PasswordBox PasswordChar="*"  FontSize="30" Foreground="Black" Background="White" PasswordChanged="PasswordBox_PasswordChanged" ></PasswordBox>
+            </StackPanel>
+            <StackPanel Grid.Row="4" Grid.Column="1" Orientation="Horizontal"  VerticalAlignment="Center">
+                <TextBlock Margin="0,0,15,0" TextDecorations="Underline" Foreground="White" FontSize="22" Text="Account registreren"/>
+                <TextBlock Text="|" Foreground="White" FontSize="22"/>
+                <TextBlock Margin="15,0" TextDecorations="Underline" Foreground="White" FontSize="22" Text="Wachtwoord vergeten?"/>
+            </StackPanel>
+            <Border Grid.Row="5" Grid.Column="1" CornerRadius="7" Height="80" Width="230" BorderBrush="#282929" Background="#282929" BorderThickness="10">
+                <Button Foreground="White" Content="Inloggen" Grid.Column="1" Grid.Row="5" Background="{x:Null}" BorderBrush="{x:Null}" Style="{DynamicResource Buttonstyleinzet}"  FontSize="40px" Click="Library_Click"/>
+            </Border>
+             
+
+
+
+
+          
+        </Grid>
+
     </Grid>
 </Window>
