--- a/StonksCasino/StonksCasino/Views/main/LibraryWindow.xaml
+++ b/StonksCasino/StonksCasino/Views/main/LibraryWindow.xaml
@@ -19,6 +19,7 @@
 
             </StackPanel>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                <Button x:Name="Uitloggen" Content="Uitloggen" FontSize="20" HorizontalAlignment="Left" Background="Transparent" Height="50" Padding="10" VerticalAlignment="Center" Foreground="White" Click="Uitloggen_Click" />
                 <Image Source="/Img/Main/Account.png" Margin="5,0" Height="40"></Image>
                 <TextBlock Text="{Binding user.MyName, Mode=OneWay}" FontSize="20" Foreground="White" VerticalAlignment="Center"/>
                 <Image Source="/Img/Main/streep.png"></Image>
